Fix Html:  - remove excess section close tags after relaxed layers pattern  - size img to not exceed page margins  - attributes must have quotes  - duplicate ids not allowed in bibliography  - bulletted list items must be inside an unordered list.  - cannot close <tr> tags that aren't open.  - td align and bgcolor replaced with css.  - </br> tag is invalid.

--- a/Group4-SoftwarePatterns-Assignment2/report-style.css
+++ b/Group4-SoftwarePatterns-Assignment2/report-style.css
@@ -156,6 +156,9 @@ body {
     margin: 0 auto;
 }
 
+.positive-impact-cell { background: #0f6; text-align:center;}
+.negative-impact-cell { background: #f33; text-align:center;}
+
 .bibliography li { -moz-border-radius: 0.7em; padding:0.1em 0.5em;}
 @media screen {
     
